--- a/index.html
+++ b/index.html
@@ -1,6 +1,113 @@
 <html>
+<body style="background-color:black;">
+    <title> We are all under </title>
+    <h1 style="color: lightgreen; font-size: 60px">
+        <strong> <u>
+            [We - Are - Vandeg[s]]
+        </strong> </u>
+    </h1>
 
-<h1> We - Are - Vandeg </h1>
-<p> We - Hate - Thomas - Bedwells</p>
+    <p style="color: lightgreen; font-size: 30px ">
+        <i>
+            'You People Have Already Ruined Society, We Are Merely Adding The Salt.' - Vandeg
+        </i>
+    </p>
 
+    <br />
+
+    <p style="color: lightgreen; font-size: 30px ">
+        <i>
+            'The Reason Why Our Growth Has Been So Rapid, Will Be The Same Reason We Return To Dust' - Vandeg
+        </i>
+    </p>
+
+    <br /> <br />
+
+    <p style="color: lightgreen; font-size: 30px ">
+        <i>
+            "Is Stalking Me Funny To You?" - Thomas Bedwell
+        </i>
+    </p>
+    <p style="color: lightgreen; font-size: 30px ">
+        <i>
+            <b>
+                "Yes,  And I'm Tired of Pretending It's Not" - Vandeg
+        </i> </b>
+    </p>
+
+    <br />
+
+    <!--------------------------------------------------->
+
+    <p style="color: lightgreen; font-size: 40px">
+        <u>
+            [Enemys of the State]
+        </u>
+    </p>
+    <ul style="color: lightgreen ">
+        <li>
+            United States Of America <br /> <br />
+        </li>
+        <li>
+            Any N.A.T.O Country That Does Not Support The State <br /> <br />
+        </li>
+        <li>
+            George W. Bush <br /> <br />
+        </li>
+        <li>
+            Julian Assange <br /> <br />
+        </li>
+        <li>
+            Hal Turner <br /> <br />
+        </li>
+        <li>
+            Epilepsy Foundation <br /> <br />
+        </li>
+        <li>
+            Defacement of S.O.H.H <br /> <br />
+        </li>
+        <li>
+            AllHipHop <br /> <br />
+        </li>
+        <li>
+            Sarah Palin <br /> <br />
+        </li>
+        <li>
+            Iranian Government <br /> <br />
+        </li>
+        <li>
+            Visa / Mastercard <br /> <br />
+        </li>
+    </ul>  
+
+    <!--------------------------------------------------->
+
+    <p style="color: lightgreen; font-size: 40px">
+        <u>
+            [The Allies]
+        </u>
+    </p>
+    <ul style="color: lightgreen ">
+        <li>
+            1. Thomas Cahill <br /> <br />
+        </li>
+        <li>
+            2. Thomas Bedwell <br /> <br />
+        </li>
+        <li>
+            Russia <br /> <br />
+        </li>
+        <li>
+            Julian Assange <br /> <br />
+        </li>
+        <li>
+            Ross Ulbricht <br /> <br />
+        </li>
+        <li>
+            Nakamoto <br /> <br />
+        </li>
+        <li>
+            Eric "Dark Byte" Heijnen <br /> <br />
+        </li>
+    </ul>
 </html>
