--- a/index.html
+++ b/index.html
@@ -1,102 +1,158 @@
 <html>
-<body style="background-color:black;">
+    <body style="background-color:black;">
     <title> We are all under </title>
-    <h1 style="color: lightgreen; font-size: 60px">
-        <strong> <u>
-            [We - Are - Vandeg[s]]
-        </strong> </u>
-    </h1>
 
-    <p style="color: lightgreen; font-size: 30px ">
-        <i>
-            'You People Have Already Ruined Society, We Are Merely Adding The Salt.' - Vandeg
-        </i>
-    </p>
+    <div class="topnav">
+        <a class="active" href="#home">
+            Home
+        </a>
+
+        <a href="#features">
+            Features
+        </a>
+
+        <a href="#purchasing">
+            Purchase
+        </a>
+
+        <a href="#discord">
+            Discord
+        </a>
+
+        <a href="#about">
+            About Me
+        </a>
+    </div>
+
+    <center>
+        <h1 style="color: lightgreen; font-size: 60px">
+            <u>
+                [We - Are - Vandeg[s]]
+            </u>
+        </h1>
+    </center>
+
+    <center>
+        <p style="color: lightgreen; font-size: 30px ">
+            <i>
+                'You People Have Already Ruined Society, We Are Merely Adding The Salt.' - Vandeg
+            </i>
+        </p>
+    </center>
 
     <br />
 
-    <p style="color: lightgreen; font-size: 30px ">
-        <i>
-            "Is Stalking Me Funny To You?" - Thomas Bedwell
-        </i>
-    </p>
-    <p style="color: lightgreen; font-size: 30px ">
-        <i> <b>
-                "Yes,  And I'm Tired of Pretending It's Not" - Vandeg
-        </i> </b>
-    </p>
+    <center>
+        <p style="color: lightgreen; font-size: 30px ">
+            <i>
+                "Is Stalking Me Funny To You?" - Thomas Bedwell
+            </i>
+        </p>
+    </center>
+
+    <center>
+        <p style="color: lightgreen; font-size: 30px ">
+            <i>
+                <b>
+                    "Yes,  And I'm Tired of Pretending It's Not" - Vandeg
+                </b>
+            </i>
+        </p>
+    </center>
 
     <br />
 
-    <!--------------------------------------------------->
+    <!---->
 
-    <p style="color: lightgreen; font-size: 40px">
-        <u>
-            [Enemys of the State]
-        </u>
-    </p>
+    <center>
+        <p style="color: lightgreen; font-size: 40px">
+            <u>
+                [Enemys of the State]
+            </u>
+        </p>
+    </center>
+
     <ul style="color: lightgreen ">
         <li>
             United States Of America <br /> <br />
         </li>
+
         <li>
             Any N.A.T.O Country That Does Not Support The State <br /> <br />
         </li>
+
         <li>
             George W. Bush <br /> <br />
         </li>
+
         <li>
             Julian Assange <br /> <br />
         </li>
+
         <li>
             Hal Turner <br /> <br />
         </li>
+
         <li>
             Epilepsy Foundation <br /> <br />
         </li>
+
         <li>
             Defacement of S.O.H.H <br /> <br />
         </li>
+
         <li>
             AllHipHop <br /> <br />
         </li>
+
         <li>
             Sarah Palin <br /> <br />
         </li>
+
         <li>
             Iranian Government <br /> <br />
         </li>
+
         <li>
             Visa / Mastercard <br /> <br />
         </li>
-    </ul>  
+    </ul>
 
-    <!--------------------------------------------------->
+    <!---->
 
-    <p style="color: lightgreen; font-size: 40px">
-        <u>
-            [The Allies]
-        </u>
-    </p>
+    <center>
+        <p style="color: lightgreen; font-size: 40px">
+            <u>
+                [The Allies]
+            </u>
+        </p>
+    </center>
+
     <ul style="color: lightgreen ">
         <li>
             1. Thomas Cahill <br /> <br />
         </li>
+
         <li>
             2. Thomas Bedwell <br /> <br />
         </li>
+
         <li>
             Russia <br /> <br />
         </li>
+
         <li>
             Julian Assange <br /> <br />
         </li>
+
         <li>
             Ross Ulbricht <br /> <br />
         </li>
+
         <li>
             Nakamoto <br /> <br />
         </li>
+
         <li>
             Eric "Dark Byte" Heijnen <br /> <br />
         </li>
