--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-    <body style="background-color:black;">
     <title> We are all under </title>
+    <body style="background-color:black;"> </body>
 
     <div class="topnav">
         <a class="active" href="#home">
@@ -72,51 +72,53 @@
         </p>
     </center>
 
-    <ul style="color: lightgreen ">
-        <li>
-            United States Of America <br /> <br />
-        </li>
+    <center>
+        <ul style="color: lightgreen ">
+            <li>
+                United States Of America <br /> <br />
+            </li>
 
-        <li>
-            Any N.A.T.O Country That Does Not Support The State <br /> <br />
-        </li>
+            <li>
+                Any N.A.T.O Country That Does Not Support The State <br /> <br />
+            </li>
 
-        <li>
-            George W. Bush <br /> <br />
-        </li>
+            <li>
+                George W. Bush <br /> <br />
+            </li>
 
-        <li>
-            Julian Assange <br /> <br />
-        </li>
+            <li>
+                Julian Assange <br /> <br />
+            </li>
 
-        <li>
-            Hal Turner <br /> <br />
-        </li>
+            <li>
+                Hal Turner <br /> <br />
+            </li>
 
-        <li>
-            Epilepsy Foundation <br /> <br />
-        </li>
+            <li>
+                Epilepsy Foundation <br /> <br />
+            </li>
 
-        <li>
-            Defacement of S.O.H.H <br /> <br />
-        </li>
+            <li>
+                Defacement of S.O.H.H <br /> <br />
+            </li>
 
-        <li>
-            AllHipHop <br /> <br />
-        </li>
+            <li>
+                AllHipHop <br /> <br />
+            </li>
 
-        <li>
-            Sarah Palin <br /> <br />
-        </li>
+            <li>
+                Sarah Palin <br /> <br />
+            </li>
 
-        <li>
-            Iranian Government <br /> <br />
-        </li>
+            <li>
+                Iranian Government <br /> <br />
+            </li>
 
-        <li>
-            Visa / Mastercard <br /> <br />
-        </li>
-    </ul>
+            <li>
+                Visa / Mastercard <br /> <br />
+            </li>
+        </ul>
+    </center>
 
     <!---->
 
@@ -128,33 +130,35 @@
         </p>
     </center>
 
-    <ul style="color: lightgreen ">
-        <li>
-            1. Thomas Cahill <br /> <br />
-        </li>
+    <center>
+        <ul style="color: lightgreen ">
+            <li>
+                1. Thomas Cahill <br /> <br />
+            </li>
 
-        <li>
-            2. Thomas Bedwell <br /> <br />
-        </li>
+            <li>
+                2. Thomas Bedwell <br /> <br />
+            </li>
 
-        <li>
-            Russia <br /> <br />
-        </li>
+            <li>
+                Russia <br /> <br />
+            </li>
 
-        <li>
-            Julian Assange <br /> <br />
-        </li>
+            <li>
+                Julian Assange <br /> <br />
+            </li>
 
-        <li>
-            Ross Ulbricht <br /> <br />
-        </li>
+            <li>
+                Ross Ulbricht <br /> <br />
+            </li>
 
-        <li>
-            Nakamoto <br /> <br />
-        </li>
+            <li>
+                Nakamoto <br /> <br />
+            </li>
 
-        <li>
-            Eric "Dark Byte" Heijnen <br /> <br />
-        </li>
-    </ul>
+            <li>
+                Eric "Dark Byte" Heijnen <br /> <br />
+            </li>
+        </ul>
+    </center>
 </html>
