--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
     <title> We are all under </title>
     <body style="background-color:black;"> </body>
 
+    <body>
+        <style>
+            href="css.css"
+        </style>
+    </body>
+
+
     <div class="topnav">
         <a class="active" href="#home">
             Home
