--- a/index.html
+++ b/index.html
@@ -1,171 +1,151 @@
-<html>
-    <title> We are all under </title>
-    <body style="background-color:black;"> </body>
+<title> We are all under </title>
+<body style="background-color:black;"> </body>
 
-    <body>
-        <style>
-            href="css.css"
-        </style>
-    </body>
+<body>
+        <link rel="stylesheet" href="css.css" >
+</body>
 
 
-    <div class="topnav">
-        <a class="active" href="#home">
-            Home
-        </a>
+<div class="topnav">
+    <a class="active" href="#home">
+        Home
+    </a>
 
-        <a href="#features">
-            Features
-        </a>
+    <a href="#features">
+        Features
+    </a>
 
-        <a href="#purchasing">
-            Purchase
-        </a>
+    <a href="#purchasing">
+        Purchase
+    </a>
 
-        <a href="#discord">
-            Discord
-        </a>
+    <a href="#discord">
+        Discord
+    </a>
 
-        <a href="#about">
-            About Me
-        </a>
-    </div>
+    <a href="#about">
+        About Me
+    </a>
+</div>
 
-    <center>
-        <h1 style="color: lightgreen; font-size: 60px">
-            <u>
-                [We - Are - Vandeg[s]]
-            </u>
-        </h1>
-    </center>
+<h1 style="color: lightgreen; font-size: 60px; text-align:center">
+    <u>
+        [We - Are - Vandeg[s]]
+    </u>
+</h1>
 
-    <center>
-        <p style="color: lightgreen; font-size: 30px ">
-            <i>
-                'You People Have Already Ruined Society, We Are Merely Adding The Salt.' - Vandeg
-            </i>
-        </p>
-    </center>
+<p style="color: lightgreen; font-size: 30px; text-align: center">
+    <i>
+        'You People Have Already Ruined Society, We Are Merely Adding The Salt.' - Vandeg
+    </i>
+</p>
 
-    <br />
+<br />
 
-    <center>
-        <p style="color: lightgreen; font-size: 30px ">
-            <i>
-                "Is Stalking Me Funny To You?" - Thomas Bedwell
-            </i>
-        </p>
-    </center>
+<p style="color: lightgreen; font-size: 30px; text-align: center">
+    <i>
+        "Is Stalking Me Funny To You?" - Thomas Bedwell
+    </i>
+</p>
 
-    <center>
-        <p style="color: lightgreen; font-size: 30px ">
-            <i>
-                <b>
-                    "Yes,  And I'm Tired of Pretending It's Not" - Vandeg
-                </b>
-            </i>
-        </p>
-    </center>
+<p style="color: lightgreen; font-size: 30px; text-align: center">
+    <i>
+        <b>
+            "Yes,  And I'm Tired of Pretending It's Not" - Vandeg
+        </b>
+    </i>
+</p>
 
-    <br />
+<br />
 
-    <!---->
+<!---->
 
-    <center>
-        <p style="color: lightgreen; font-size: 40px">
-            <u>
-                [Enemys of the State]
-            </u>
-        </p>
-    </center>
+<p style="color: lightgreen; font-size: 40px; text-align: center">
+    <u>
+        [Enemys of the State]
+    </u>
+</p>
 
-    <center>
-        <ul style="color: lightgreen ">
-            <li>
-                United States Of America <br /> <br />
-            </li>
+<ul style="color: lightgreen; text-align: center">
+    <li>
+        United States Of America <br /> <br />
+    </li>
 
-            <li>
-                Any N.A.T.O Country That Does Not Support The State <br /> <br />
-            </li>
+    <li>
+        Any N.A.T.O Country That Does Not Support The State <br /> <br />
+    </li>
 
-            <li>
-                George W. Bush <br /> <br />
-            </li>
+    <li>
+        George W. Bush <br /> <br />
+    </li>
 
-            <li>
-                Julian Assange <br /> <br />
-            </li>
+    <li>
+        Julian Assange <br /> <br />
+    </li>
 
-            <li>
-                Hal Turner <br /> <br />
-            </li>
+    <li>
+        Hal Turner <br /> <br />
+    </li>
 
-            <li>
-                Epilepsy Foundation <br /> <br />
-            </li>
+    <li>
+        Epilepsy Foundation <br /> <br />
+    </li>
 
-            <li>
-                Defacement of S.O.H.H <br /> <br />
-            </li>
+    <li>
+        Defacement of S.O.H.H <br /> <br />
+    </li>
 
-            <li>
-                AllHipHop <br /> <br />
-            </li>
+    <li>
+        AllHipHop <br /> <br />
+    </li>
 
-            <li>
-                Sarah Palin <br /> <br />
-            </li>
+    <li>
+        Sarah Palin <br /> <br />
+    </li>
 
-            <li>
-                Iranian Government <br /> <br />
-            </li>
+    <li>
+        Iranian Government <br /> <br />
+    </li>
 
-            <li>
-                Visa / Mastercard <br /> <br />
-            </li>
-        </ul>
-    </center>
+    <li>
+        Visa / Mastercard <br /> <br />
+    </li>
+</ul>
 
-    <!---->
+<!---->
 
-    <center>
-        <p style="color: lightgreen; font-size: 40px">
-            <u>
-                [The Allies]
-            </u>
-        </p>
-    </center>
+<p style="color: lightgreen; font-size: 40px; text-align: center">
+    <u>
+        [The Allies]
+    </u>
+</p>
 
-    <center>
-        <ul style="color: lightgreen ">
-            <li>
-                1. Thomas Cahill <br /> <br />
-            </li>
+<ul style="color: lightgreen; text-align: center">
+    <li>
+        1. Thomas Cahill <br /> <br />
+    </li>
 
-            <li>
-                2. Thomas Bedwell <br /> <br />
-            </li>
+    <li>
+        2. Thomas Bedwell <br /> <br />
+    </li>
 
-            <li>
-                Russia <br /> <br />
-            </li>
+    <li>
+        Russia <br /> <br />
+    </li>
 
-            <li>
-                Julian Assange <br /> <br />
-            </li>
+    <li>
+        Julian Assange <br /> <br />
+    </li>
 
-            <li>
-                Ross Ulbricht <br /> <br />
-            </li>
+    <li>
+        Ross Ulbricht <br /> <br />
+    </li>
 
-            <li>
-                Nakamoto <br /> <br />
-            </li>
+    <li>
+        Nakamoto <br /> <br />
+    </li>
 
-            <li>
-                Eric "Dark Byte" Heijnen <br /> <br />
-            </li>
-        </ul>
-    </center>
-</html>
+    <li>
+        Eric "Dark Byte" Heijnen <br /> <br />
+    </li>
+</ul>
