--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </u>
 </p>
 
-<ul style="color: lightgreen; text-align: center">
+<ul style="color: lightgreen; text-align: center; list-style-position: inside">
     <li>
         United States Of America <br /> <br />
     </li>
@@ -120,7 +120,7 @@
     </u>
 </p>
 
-<ul style="color: lightgreen; text-align: center">
+<ul style="color: lightgreen; text-align: center; list-style-position: inside">
     <li>
         1. Thomas Cahill <br /> <br />
     </li>
