--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<title> We are all under </title>
+<title> Always ahead of the game. </title>
 <body style="background-color:black;"> </body>
 
 <body>
@@ -36,7 +36,7 @@
 
 <p style="color: lightgreen; font-size: 30px; text-align: center">
     <i>
-        'You People Have Already Ruined Society, We Are Merely Adding The Salt.' - Vandeg
+        'You People Have Already Ruined Society, We Are Merely Adding The Salt.'
     </i>
 </p>
 
@@ -66,51 +66,19 @@
     </u>
 </p>
 
-<ul style="color: lightgreen; text-align: center; list-style-position: inside">
-    <li>
-        United States Of America <br /> <br />
-    </li>
-
-    <li>
-        Any N.A.T.O Country That Does Not Support The State <br /> <br />
-    </li>
-
-    <li>
-        George W. Bush <br /> <br />
-    </li>
-
-    <li>
-        Julian Assange <br /> <br />
-    </li>
-
-    <li>
-        Hal Turner <br /> <br />
-    </li>
-
-    <li>
-        Epilepsy Foundation <br /> <br />
-    </li>
-
-    <li>
-        Defacement of S.O.H.H <br /> <br />
-    </li>
-
-    <li>
-        AllHipHop <br /> <br />
-    </li>
-
-    <li>
-        Sarah Palin <br /> <br />
-    </li>
-
-    <li>
-        Iranian Government <br /> <br />
-    </li>
-
-    <li>
-        Visa / Mastercard <br /> <br />
-    </li>
-</ul>
+<p style="color: lightgreen; text-align: center; list-style-position: inside">
+    United States Of America <br /> <br />
+    Any N.A.T.O Country That Does Not Support The State <br /> <br />
+    George W. Bush <br /> <br />
+    Julian Assange <br /> <br />
+    Hal Turner <br /> <br />
+    Epilepsy Foundation <br /> <br />
+    Defacement of S.O.H.H <br /> <br />
+    AllHipHop <br /> <br />
+    Sarah Palin <br /> <br />
+    Iranian Government <br /> <br />
+    Visa / Mastercard <br /> <br />
+</p>
 
 <!---->
 
@@ -120,32 +88,12 @@
     </u>
 </p>
 
-<ul style="color: lightgreen; text-align: center; list-style-position: inside">
-    <li>
-        1. Thomas Cahill <br /> <br />
-    </li>
-
-    <li>
-        2. Thomas Bedwell <br /> <br />
-    </li>
-
-    <li>
-        Russia <br /> <br />
-    </li>
-
-    <li>
-        Julian Assange <br /> <br />
-    </li>
-
-    <li>
-        Ross Ulbricht <br /> <br />
-    </li>
-
-    <li>
-        Nakamoto <br /> <br />
-    </li>
-
-    <li>
-        Eric "Dark Byte" Heijnen <br /> <br />
-    </li>
-</ul>
+<p style="color: lightgreen; text-align: center; list-style-position: inside">
+    1. Thomas Cahill <br /> <br />
+    2. Thomas Bedwell <br /> <br />
+    Russia <br /> <br />
+    Julian Assange <br /> <br />
+    Ross Ulbricht <br /> <br />
+    Nakamoto <br /> <br />
+    Eric "Dark Byte" Heijnen <br /> <br />
+</p>
