--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <title> Always ahead of the game. </title>
 
 <body>
-        <link rel="stylesheet" href="css.css" >
+    <link rel="stylesheet" href="css.css" >
+    <div class="gradient">
+
+    </div>
 </body>
 
 
