--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 
 <body>
     <link rel="stylesheet" href="css.css" >
-    <div class="gradient">
-
-    </div>
 </body>
 
+<div class="gradient"> </div>
 
 <div class="topnav">
     <a class="active" href="#home">
