--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <title> Always ahead of the game. </title>
 
+<html>
 <body>
-    <link rel="stylesheet" href="css.css" >
+    <link rel="stylesheet" href="css.css">
 </body>
+
+<div class="gradient"> </div>
 
 <div class="topnav">
     <a class="active" href="#home">
@@ -95,5 +98,4 @@
     Nakamoto <br /> <br />
     Eric "Dark Byte" Heijnen <br /> <br />
 </p>
-
-<div class="gradient"> </div>
+</html>
