--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
 
 <p style="color: lightgreen; font-size: 40px; text-align: center">
     <u>
-        [Enemys of the State]
+        <strong>
+            [Enemys of the State]
+        </strong>
     </u>
 </p>
 
@@ -84,7 +86,9 @@
 
 <p style="color: lightgreen; font-size: 40px; text-align: center">
     <u>
-        [The Allies]
+        <strong>
+            [The Allies]
+        </strong>
     </u>
 </p>
 
