--- a/index.html
+++ b/index.html
@@ -28,7 +28,15 @@
 
 <h1 style="color: lightgreen; font-size: 60px; text-align:center">
     <u>
-        [We - Are - Vandeg[s]]
+        [Abaddon]
+    </u>
+</h1>
+
+<br />
+
+<h1 style="color: lightgreen; font-size: 30px; text-align:center">
+    <u>
+        "Always ahead of the game."
     </u>
 </h1>
 
