--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     </a>
 
     <a href="#about">
-        About Me
+        About
+    </a>
+
+    <a href="#about">
+        FAQ
     </a>
 </div>
 
