--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <div class="topnav">
     <a href="#">
-        [Abaddon] 
+        [Abaddon]
     </a>
 
     <a class="active" href="#home">
@@ -34,25 +34,34 @@
     </a>
 </div>
 
-<h1 style="color: lightgreen; font-size: 60px; text-align:center">
-    <u>
-        [Abaddon]
-    </u>
+<style>
+    body {
+        background-color: black;
+        font-family: cursive;
+    }
+
+    .glow {
+        font-size: 80px;
+        color: #fff;
+        text-align: center;
+        animation: glow 1s ease-in-out infinite alternate;
+    }
+
+    @-webkit-keyframes glow {
+        from {
+            text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+        }
+
+        to {
+            text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+        }
+    }
+</style>
+
+<h1 class="glow">ABADDON</h1>
+<h1 class="glow"; style="font-size: 30px">
+    ABADDON
 </h1>
-
-<h1 style="color: lightgreen; font-size: 30px; text-align:center">
-    <u>
-        "Always ahead of the game."
-    </u>
-</h1>
-
-<br />
-
-<p style="color: lightgreen; font-size: 30px; text-align: center">
-    <i>
-        'You People Have Already Ruined Society, We Are Merely Adding The Salt.'
-    </i>
-</p>
 
 <br />
 
