--- a/index.html
+++ b/index.html
@@ -35,11 +35,6 @@
 </div>
 
 <style>
-    body {
-        background-color: black;
-        font-family: cursive;
-    }
-
     .glow {
         font-size: 80px;
         color: #fff;
@@ -49,18 +44,18 @@
 
     @-webkit-keyframes glow {
         from {
-            text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+            text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #32a852, 0 0 40px #32a852, 0 0 50px #32a852, 0 0 60px #32a852, 0 0 70px #32a852;
         }
 
         to {
-            text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+            text-shadow: 0 0 20px #fff, 0 0 30px #32a852, 0 0 40px #32a852, 0 0 50px #32a852, 0 0 60px #32a852, 0 0 70px #32a852, 0 0 80px #32a852;
         }
     }
 </style>
 
 <h1 class="glow">ABADDON</h1>
 <h1 class="glow"; style="font-size: 30px">
-    ABADDON
+    Thomas Bedwell, I'm not impressed.
 </h1>
 
 <br />
