--- a/index.html
+++ b/index.html
@@ -62,15 +62,13 @@
 
 <p style="color: lightgreen; font-size: 30px; text-align: center">
     <i>
-        "Is Stalking Me Funny To You?" - Thomas Bedwell
+        "Is stalking me funny to you?" - Thomas Bedwell
     </i>
 </p>
 
 <p style="color: lightgreen; font-size: 30px; text-align: center">
     <i>
-        <b>
-            "Yes,  And I'm Tired of Pretending It's Not" - Vandeg
-        </b>
+        "Yes, and I'm tired of preteneding it's not." - Libertine
     </i>
 </p>
 
