--- a/index.html
+++ b/index.html
@@ -35,16 +35,9 @@
 </div>
 
 <style>
-    .glow {
-        font-size: 80px;
-        color: #fff;
-        text-align: center;
-        animation: glow 1s ease-in-out infinite alternate;
-    }
-
     @-webkit-keyframes glow {
         from {
-            text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #32a852, 0 0 40px #32a852, 0 0 50px #32a852, 0 0 60px #32a852, 0 0 70px #32a852;
+            text-shadow: 0 0 10px #571f1f, 0 0 20px #fff, 0 0 30px #32a852, 0 0 40px #32a852, 0 0 50px #32a852, 0 0 60px #32a852, 0 0 70px #32a852;
         }
 
         to {
