--- a/index.html
+++ b/index.html
@@ -34,6 +34,25 @@
     </a>
 </div>
 
+<style>
+    .glow {
+        font-size: 80px;
+        color: #fff;
+        text-align: center;
+        animation: glow 1s ease-in-out infinite alternate;
+    }
+
+    @-webkit-keyframes glow {
+        from {
+            text-shadow: 0 0 10px #571f1f, 0 0 20px #fff, 0 0 30px #32a852, 0 0 40px #32a852, 0 0 50px #32a852, 0 0 60px #32a852, 0 0 70px #32a852;
+        }
+
+        to {
+            text-shadow: 0 0 20px #fff, 0 0 30px #32a852, 0 0 40px #32a852, 0 0 50px #32a852, 0 0 60px #32a852, 0 0 70px #32a852, 0 0 80px #32a852;
+        }
+    }
+</style>
+
 <h1 class="glow">ABADDON</h1>
 <h1 class="glow"; style="font-size: 30px">
     Thomas Bedwell, I'm not impressed.
