--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <p style="color: lightgreen; font-size: 40px; text-align: center">
     <u>
         <strong>
-            [Enemys of the State]
+            [ENEMYS OF THE STATE]
         </strong>
     </u>
 </p>
@@ -103,7 +103,7 @@
 <p style="color: lightgreen; font-size: 40px; text-align: center">
     <u>
         <strong>
-            [The Allies]
+            [THE ALLIES]
         </strong>
     </u>
 </p>
