--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
         Features
     </a>
 
+    <a href="#features">
+        Security
+    </a>
+
     <a href="#purchasing">
         Purchase
     </a>
 
-    <a href="#discord">
+    <a href="https://discord.com/">
         Discord
     </a>
 
