--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         Purchase
     </a>
 
-    <a href="https://discord.com/">
+    <a href="https://discord.com/" target="_blank">
         Discord
     </a>
 
