--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
         Discord
     </a>
 
+    <a href="https://www.divicast.com/watch-tv/watch-my-little-pony-friendship-is-magic-2010-online-free-38938.4969648" target="_blank">
+        My Little Pony
+    </a>
+
     <a href="#about">
         About
     </a>
