--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <link rel="stylesheet" href="css.css">
 </body>
 
+<!-- Important -->
+
 <div class="topnav">
     <a href="#">
         [Abaddon]
@@ -42,6 +44,8 @@
     </a>
 </div>
 
+<!-- Top Buttons -->
+
 <style>
     .glow {
         font-size: 80px;
@@ -61,8 +65,10 @@
     }
 </style>
 
+<!-- CSS Glow -->
+
 <h1 class="glow">ABADDON</h1>
-<h1 class="glow"; style="font-size: 30px">
+<h1 class="glow" ; style="font-size: 30px">
     <u>
         Thomas Bedwell, I'm not impressed.
     </u>
@@ -84,7 +90,7 @@
 
 <br />
 
-<!---->
+<!-- Message of the day -->
 
 <p style="color: lightgreen; font-size: 40px; text-align: center">
     <strong>
