--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
 
 <p style="color: lightgreen; font-size: 30px; text-align: center">
     <i>
+        MOTD
+    </i>
+</p>
+
+<p style="color: lightgreen; font-size: 30px; text-align: center">
+    <i>
         "Is stalking me funny to you?" - Thomas Bedwell
     </i>
 </p>
@@ -99,17 +105,28 @@
 </p>
 
 <p style="color: lightgreen; text-align: center; list-style-position: inside">
-    United States Of America <br /> <br />
-    Any N.A.T.O Country That Does Not Support The State <br /> <br />
-    George W. Bush <br /> <br />
-    Julian Assange <br /> <br />
-    Hal Turner <br /> <br />
-    Epilepsy Foundation <br /> <br />
-    Defacement of S.O.H.H <br /> <br />
-    AllHipHop <br /> <br />
-    Sarah Palin <br /> <br />
-    Iranian Government <br /> <br />
-    Visa / Mastercard <br /> <br />
+    United States Of America 
+    <br /> <br />
+    Any N.A.T.O Country That Does Not Support The State 
+    <br /> <br />
+    George W. Bush 
+    <br /> <br />
+    Julian Assange 
+    <br /> <br />
+    Hal Turner 
+    <br /> <br />
+    Epilepsy Foundation 
+    <br /> <br />
+    Defacement of S.O.H.H 
+    <br /> <br />
+    AllHipHop 
+    <br /> <br />
+    Sarah Palin 
+    <br /> <br />
+    Iranian Government 
+    <br /> <br />
+    Visa / Mastercard 
+    <br /> <br />
 </p>
 
 <!---->
@@ -121,11 +138,18 @@
 </p>
 
 <p style="color: lightgreen; text-align: center; list-style-position: inside">
-    1. Thomas Cahill <br /> <br />
-    2. Thomas Bedwell <br /> <br />
-    Russia <br /> <br />
-    Julian Assange <br /> <br />
-    Ross Ulbricht <br /> <br />
-    Nakamoto <br /> <br />
-    Eric "Dark Byte" Heijnen <br /> <br />
+    1. Thomas Cahill 
+    <br /> <br />
+    2. Thomas Bedwell 
+    <br /> <br />
+    Russia 
+    <br /> <br />
+    Julian Assange 
+    <br /> <br />
+    Ross Ulbricht 
+    <br /> <br />
+    Nakamoto 
+    <br /> <br />
+    Eric "Dark Byte" Heijnen 
+    <br /> <br />
 </p>
