--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 <!-- CSS Glow -->
 
 <h1 class="glow">ABADDON</h1>
-<h1 class="glow" ; style="font-size: 30px">
+<h2 class="glow">
     <u>
         Thomas Bedwell, I'm not impressed.
     </u>
-</h1>
+</h2>
 
 <br />
 
