--- a/index.html
+++ b/index.html
@@ -69,14 +69,18 @@
 
 <h1 class="glow">ABADDON</h1>
 
-<h4 class="glow">
+<h1 class="glow" ; style="font-size: 35px">
     <u>
         Thomas Bedwell, I'm not impressed.
     </u>
-</h4>
+</h1>
+
+<!---->
 
 <hr />
 <br />
+
+<!---->
 
 <p style="color: lightgreen; font-size: 30px; text-align: center">
     <u>
@@ -96,10 +100,12 @@
     </i>
 </p>
 
+<!-- Message of the day -->
+
 <hr />
 <br />
 
-<!-- Message of the day -->
+<!---->
 
 <p style="color: lightgreen; font-size: 40px; text-align: center">
     <strong>
@@ -108,27 +114,27 @@
 </p>
 
 <p style="color: lightgreen; text-align: center; list-style-position: inside">
-    United States Of America 
+    United States Of America
     <br /> <br />
-    Any N.A.T.O Country That Does Not Support The State 
+    Any N.A.T.O Country That Does Not Support The State
     <br /> <br />
-    George W. Bush 
+    George W. Bush
     <br /> <br />
-    Julian Assange 
+    Julian Assange
     <br /> <br />
-    Hal Turner 
+    Hal Turner
     <br /> <br />
-    Epilepsy Foundation 
+    Epilepsy Foundation
     <br /> <br />
-    Defacement of S.O.H.H 
+    Defacement of S.O.H.H
     <br /> <br />
-    AllHipHop 
+    AllHipHop
     <br /> <br />
-    Sarah Palin 
+    Sarah Palin
     <br /> <br />
-    Iranian Government 
+    Iranian Government
     <br /> <br />
-    Visa / Mastercard 
+    Visa / Mastercard
     <br /> <br />
 </p>
 
@@ -141,18 +147,25 @@
 </p>
 
 <p style="color: lightgreen; text-align: center; list-style-position: inside">
-    1. Thomas Cahill 
+    1. Thomas Cahill
     <br /> <br />
-    2. Thomas Bedwell 
+    2. Thomas Bedwell
     <br /> <br />
-    Russia 
+    Russia
     <br /> <br />
-    Julian Assange 
+    Julian Assange
     <br /> <br />
-    Ross Ulbricht 
+    Ross Ulbricht
     <br /> <br />
-    Nakamoto 
+    Nakamoto
     <br /> <br />
-    Eric "Dark Byte" Heijnen 
+    Eric "Dark Byte" Heijnen
     <br /> <br />
 </p>
+
+<!---->
+
+<hr />
+<br />
+
+<!---->
