--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 <p style="color: lightgreen; font-size: 30px; text-align: center">
     <i>
-        "Yes, and I'm tired of preteneding it's not." - Libertine
+        "Yes, and I'm tired of pretending it's not." - Libertine
     </i>
 </p>
 
