--- a/index.html
+++ b/index.html
@@ -46,6 +46,20 @@
 
 <!-- Top Buttons -->
 
+<style>
+    @-webkit-keyframes glowanim {
+        from {
+            text-shadow: 0 0 10px #571f1f, 0 0 20px #fff, 0 0 30px #32a852, 0 0 40px #32a852, 0 0 50px #32a852, 0 0 60px #32a852, 0 0 70px #32a852;
+        }
+
+        to {
+            text-shadow: 0 0 20px #fff, 0 0 30px #32a852, 0 0 40px #32a852, 0 0 50px #32a852, 0 0 60px #32a852, 0 0 70px #32a852, 0 0 80px #32a852;
+        }
+    }
+</style>
+
+<!-- CSS Glow -->
+
 <h1 class="glow">ABADDON</h1>
 
 <h1 class="glow" ; style="font-size: 30px">
