--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
 
 <!-- Top Buttons -->
 
+.glow {
+    font-size: 80px;
+    color: #fff;
+    text-align: center;
+    animation: glowanim 1s ease-in-out infinite alternate;
+}
+
 <style>
     @-webkit-keyframes glowanim {
         from {
