--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <link rel="stylesheet" href="css.css">
 </body>
 
+<div class="outer">
+    <div class="inner"></div>
+    <div class="resize"></div>
+</div>
+
 <!-- Important -->
 
 <div class="topnav">
@@ -84,7 +89,9 @@
 
 <p style="color: lightgreen; font-size: 30px; text-align: center">
     <u>
-        MOTD
+        <strong>
+            MOTD
+        </strong>
     </u>
 </p>
 
