--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 <!---->
 
-<p style="color: lightgreen; font-size: 30px; text-align: center">
+<p style="color: lightgreen; font-size: 30px; text-align: center" class="box">
     <u>
         <strong>
             MOTD
