--- a/index.html
+++ b/index.html
@@ -90,14 +90,12 @@
     </u>
 </p>
 
-<p style="color: lightgreen; font-size: 30px; text-align: center">
+<br />
+
+<p style="color: lightgreen; font-size: 30px; text-align: center" class="box" class="box">
     <i>
         "Is stalking me funny to you?" - Thomas Bedwell
-    </i>
-</p>
-
-<p style="color: lightgreen; font-size: 30px; text-align: center">
-    <i>
+        <br />
         "Yes, and I'm tired of pretending it's not." - Libertine
     </i>
 </p>
@@ -108,13 +106,13 @@
 
 <!---->
 
-<p style="color: lightgreen; font-size: 40px; text-align: center">
+<p style="color: lightgreen; font-size: 40px; text-align: center" class="box">
     <strong>
         [ENEMYS OF THE STATE]
     </strong>
 </p>
 
-<p style="color: lightgreen; text-align: center; list-style-position: inside">
+<p style="color: lightgreen; text-align: center; list-style-position: inside" class="box">
     United States Of America
     <br /> <br />
     Any N.A.T.O Country That Does Not Support The State
@@ -136,13 +134,15 @@
 
 <!---->
 
-<p style="color: lightgreen; font-size: 40px; text-align: center">
+<p style="color: lightgreen; font-size: 40px; text-align: center" class="box">
     <strong>
         [THE ALLIES]
     </strong>
 </p>
 
-<p style="color: lightgreen; text-align: center; list-style-position: inside">
+<br />
+
+<p style="color: lightgreen; text-align: center; list-style-position: inside" class="box">
     1. Thomas Cahill
     <br /> <br />
     2. Thomas Bedwell
