--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 <br />
 
-<p style="color: lightgreen; font-size: 30px; text-align: center" class="box" class="box">
+<p style="color: lightgreen; font-size: 30px; text-align: center" class="box">
     <i>
         "Is stalking me funny to you?" - Thomas Bedwell
         <br />
