--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 <!---->
 
-<p style="color: lightgreen; font-size: 30px; text-align: center" class="box">
+<p style="color: lightgreen; font-size: 30px; text-align: center">
     <u>
         <strong>
             MOTD
@@ -92,7 +92,7 @@
 
 <br />
 
-<p style="color: lightgreen; font-size: 30px; text-align: center" class="box">
+<p style="color: lightgreen; font-size: 30px; text-align: center">
     <i>
         "Is stalking me funny to you?" - Thomas Bedwell
         <br />
@@ -106,13 +106,13 @@
 
 <!---->
 
-<p style="color: lightgreen; font-size: 40px; text-align: center" class="box">
+<p style="color: lightgreen; font-size: 40px; text-align: center">
     <strong>
         [ENEMYS OF THE STATE]
     </strong>
 </p>
 
-<p style="color: lightgreen; text-align: center; list-style-position: inside" class="box">
+<p style="color: lightgreen; text-align: center; list-style-position: inside">
     United States Of America
     <br /> <br />
     Any N.A.T.O Country That Does Not Support The State
@@ -134,7 +134,7 @@
 
 <!---->
 
-<p style="color: lightgreen; font-size: 40px; text-align: center" class="box">
+<p style="color: lightgreen; font-size: 40px; text-align: center">
     <strong>
         [THE ALLIES]
     </strong>
@@ -142,7 +142,7 @@
 
 <br />
 
-<p style="color: lightgreen; text-align: center; list-style-position: inside" class="box">
+<p style="color: lightgreen; text-align: center; list-style-position: inside">
     1. Thomas Cahill
     <br /> <br />
     2. Thomas Bedwell
