--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 
 <!-- CSS Glow -->
 
-<h1 class="glow">ABADDON</h1>
+<h1 class="glow">ABADDON_V2</h1>
 
 <h1 class="glow" ; style="font-size: 30px">
     <u>
-        Thomas Bedwell, I'm not impressed.
+        We're always one step ahead of the "game".
     </u>
 </h1>
 
@@ -87,9 +87,9 @@
 
 <p style="color: lightgreen; font-size: 30px; text-align: center">
     <i>
-        "Is stalking me funny to you?" - Thomas Bedwell
+        "Another patch?" - X
         <br />
-        "Yes, and I'm tired of pretending it's not." - Libertine
+        "Not anymore." - Y
     </i>
 </p>
 
