--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<title> Always ahead of the game. </title>
+<title> Feel Victory </title>
 
 <body>
     <link rel="stylesheet" href="css.css">
@@ -31,16 +31,8 @@
         Discord
     </a>
 
-    <a href="https://www.divicast.com/watch-tv/watch-my-little-pony-friendship-is-magic-2010-online-free-38938.4969648" target="_blank">
-        My Little Pony
-    </a>
-
     <a href="#about">
         About
-    </a>
-
-    <a href="#about">
-        FAQ
     </a>
 </div>
 
@@ -87,9 +79,9 @@
 
 <p style="color: lightgreen; font-size: 30px; text-align: center">
     <i>
-        "Another patch?" - X
+        "Another patch?" - A
         <br />
-        "Not anymore." - Y
+        "Not anymore." - V
     </i>
 </p>
 
