--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <p style="color: lightgreen; font-size: 30px; text-align: center">
     <u>
         <strong>
-            MOTD
+            Never taste defeat ever again.
         </strong>
     </u>
 </p>
