--- a/index.html
+++ b/index.html
@@ -1,42 +1,34 @@
-<title> Feel Victory </title>
+<title> Fair trade. </title>
 
 <body>
     <link rel="stylesheet" href="css.css">
 </body>
 
-<!-- Important -->
+<!---->
 
 <div class="topnav">
     <a href="#">
-        [Abaddon]
+        [Dominux]
     </a>
 
-    <a class="active" href="#home">
-        Home
-    </a>
-
-    <a href="#features">
-        Features
-    </a>
-
-    <a href="#features">
-        Security
-    </a>
-
-    <a href="#purchasing">
+    <a class="active" href="#purchasing">
         Purchase
+    </a>
+
+    <a href="#about">
+        Sell
+    </a>
+
+    <a href="#about">
+        Market Forums
     </a>
 
     <a href="https://discord.com/" target="_blank">
         Discord
     </a>
-
-    <a href="#about">
-        About
-    </a>
 </div>
 
-<!-- Top Buttons -->
+<!---->
 
 <style>
     .glow {
@@ -59,91 +51,71 @@
 
 <!-- CSS Glow -->
 
-<h1 class="glow">ABADDON_V2</h1>
+<h1 class="glow">Dominux</h1>
 
 <h1 class="glow" ; style="font-size: 30px">
     <u>
-        We're always one step ahead of the "game".
+        Free from rules, we present
+    </u>
+
+    <br />
+
+    <u>
+        A safe haven for traders like you.
     </u>
 </h1>
 
+<hr />
+
+<!---->
+
+<div class="centered">
+    <button>
+        Purchase
+    </button>
+</div>
+
+<div class="centered">
+    <input type="text" />
+</div>
+
+<hr />
+
+<!---->
+
+<div class="centered" ; style="font-size: 15px">
+    <p style="color:green">
+        Cheapest rate : $2.5/1
+    </p>
+
+    <p style="color:white">
+        4356 Navex available.
+    </p>
+
+    <p style="color:orange">
+        Average rate : $3.5/1
+    </p>
+
+    <p style="color:white">
+        53278 Navex available.
+    </p>
+
+    <p style="color:red">
+        Highest rate : $4.5/1
+    </p>
+
+    <p style="color:white">
+        74245 Navex available.
+    </p>
+</div>
+
+<hr />
 <br />
 
-<p style="color: lightgreen; font-size: 30px; text-align: center">
-    <u>
-        <strong>
-            Never taste defeat ever again.
-        </strong>
-    </u>
-</p>
-
-<p style="color: lightgreen; font-size: 30px; text-align: center">
-    <i>
-        "Another patch?" - A
-        <br />
-        "Not anymore." - V
-    </i>
-</p>
-
-<!-- Message of the day -->
-
-<hr />
-
-<!---->
-
-<p style="color: lightgreen; font-size: 40px; text-align: center">
-    <strong>
-        [ENEMYS OF THE STATE]
-    </strong>
-</p>
-
-<p style="color: lightgreen; text-align: center; list-style-position: inside">
-    United States Of America
-    <br /> <br />
-    Any N.A.T.O Country That Does Not Support The State
-    <br /> <br />
-    George W. Bush
-    <br /> <br />
-    Julian Assange
-    <br /> <br />
-    Hal Turner
-    <br /> <br />
-    Defacement of S.O.H.H
-    <br /> <br />
-    Sarah Palin
-    <br /> <br />
-    Iranian Government
-    <br /> <br />
-    Visa / Mastercard
-</p>
-
-<!---->
-
-<p style="color: lightgreen; font-size: 40px; text-align: center">
-    <strong>
-        [THE ALLIES]
-    </strong>
-</p>
-
-<p style="color: lightgreen; text-align: center; list-style-position: inside">
-    1. Thomas Cahill
-    <br /> <br />
-    2. Thomas Bedwell
-    <br /> <br />
-    Russia
-    <br /> <br />
-    Julian Assange
-    <br /> <br />
-    Ross Ulbricht
-    <br /> <br />
-    Nakamoto
-    <br /> <br />
-    Eric "Dark Byte" Heijnen
-    <br /> <br />
-</p>
-
-<!---->
-
-<hr />
-
-<!---->
+<div class="centered"; style="position: absolute; bottom: 0px; right: 25%; left: 25%">
+    <img src="btc.png" style="width: 50px; height: 50px">
+    <img src="eth.png" style="width: 50px; height: 50px">
+    <img src="ltc.png" style="width: 50px; height: 50px">
+    <img src="usdt.png" style="width: 50px; height: 50px">
+    <img src="pp.png" style="width: 50px; height: 50px">
+</div>
