--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<title> Fair trade. </title>
+<title> Dominux. A Fair trade. </title>
 
 <body>
     <link rel="stylesheet" href="css.css">
@@ -11,15 +11,15 @@
         [Dominux]
     </a>
 
-    <a class="active" href="#purchasing">
+    <a class="active" href="#Purchasing">
         Purchase
     </a>
 
-    <a href="#about">
+    <a href="#Selling">
         Sell
     </a>
 
-    <a href="#about">
+    <a href="#Forums">
         Market Forums
     </a>
 
@@ -75,6 +75,8 @@
     </button>
 </div>
 
+<br />
+
 <div class="centered">
     <input type="text" />
 </div>
@@ -113,9 +115,9 @@
 <br />
 
 <div class="centered"; style="position: absolute; bottom: 0px; right: 25%; left: 25%">
-    <img src="btc.png" style="width: 50px; height: 50px">
-    <img src="eth.png" style="width: 50px; height: 50px">
-    <img src="ltc.png" style="width: 50px; height: 50px">
-    <img src="usdt.png" style="width: 50px; height: 50px">
-    <img src="pp.png" style="width: 50px; height: 50px">
+    <img src="btc.png" style="width: 30px; height: 30px ">
+    <img src="eth.png" style="width: 30px; height: 30px ">
+    <img src="ltc.png" style="width: 30px; height: 30px ">
+    <img src="usdt.png" style="width: 30px; height: 30px ">
+    <img src="pp.png" style="width: 30px; height: 30px ">
 </div>
